6. Appendix - Vue.js Fundamental: 3. List Rendering - Part 1 of 3

--- a/vueapp/ListRendering/list-rendering-5.html
+++ b/vueapp/ListRendering/list-rendering-5.html
@@ -41,7 +41,7 @@
                 {name: "Laravel", github: null, stackoverflow: 100, overall: 100},
                 {name: "CodeIgniter", github: null, stackoverflow: 100, overall: 100},
                 {name: "Crash Course", github: null, stackoverflow: 100, overall: 100},
-                {name: "Makan", github: null, stackoverflow: 100, overall: 100},
+                {name: "Makan", github: null, stackoverflow: 100, overall: 100}
             ]
         }
     })
