6. Appendix - Vue.js Fundamental: 5. List Rendering - Part 3 of 3

--- a/vueapp/ConditionalRendering/conditional-rendering-1.html
+++ b/vueapp/ConditionalRendering/conditional-rendering-1.html
@@ -8,25 +8,21 @@
 <body>
 
 <div class="container py-5" id="app">
-    <div v-if="records.length < 0" class="alert alert-warning">
+    <div v-if="!records.length && showAlert" class="alert alert-warning">
         You don't have any record
     </div>
-    <div v-else-if="records.length === 1" class="alert alert-primary">
-        You only have 1 record
-    </div>
-    <div v-else class="alert alert-success">
-        You have some record
-    </div>
+    <button v-on:click="showAlert = false" class="btn btn-primary">Hide Message</button>
 </div>
 
 
-<script src="js/vue.js"></script>
+<script src="../js/vue.js"></script>
 
 <script>
     new Vue({
         el: '#app',
         data: {
-            records: [1, 2]
+            showAlert: true,
+            records: [1]
         }
     })
 </script>
