--- a/vueapp/event-handling-3.html
+++ b/vueapp/event-handling-3.html
@@ -20,9 +20,9 @@
             </li>
         </ul>
 
-        <form v-on:submit="handleSubmit">
+        <form v-on:submit.prevent="handleSubmit">
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Enter Your another favorite Framework">
+              <input v-model="framework" type="text" class="form-control" placeholder="Enter Your another favorite Framework">
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="submit">Submit</button>
               </div>
@@ -40,13 +40,19 @@
                 { name: "React.js", votes: 0 },
                 { name: "Vue.js", votes: 0 },
             ],
+            framework: ''
         },
         methods: {
             upvote (framework) {
                 framework.votes++
             },
             handleSubmit () {
-                alert('Submit');
+                this.favoriteFrameworks.push({
+                    name: this.framework,
+                    votes: 0
+                });
+
+                this.framework = '';
             }
         }
     })
