--- a/vueapp/01.MyFirstVueJS/index.html
+++ b/vueapp/01.MyFirstVueJS/index.html
@@ -10,7 +10,7 @@
     <h1>{{ message }}</h1>
 </div>
 
-<script src="js/vue.js"></script>
+<script src="../js/vue.js"></script>
 <script>
     new Vue({
         el: '#app',
