--- a/vueapp/07.ComputedProperty/computed-property-2.html
+++ b/vueapp/07.ComputedProperty/computed-property-2.html
@@ -5,7 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Computed Property 2</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <style media="screen">
+        .sort-control {
+            cursor: pointer;
+        }
+
+        .ascending::after {
+            content: "\25b2";
+        }
+
+        .descending::after {
+            content: "\25bc";
+        }
+    </style>
 </head>
 <body>
     <div class="container py-5" id="app">
@@ -14,11 +27,11 @@
             <thead class="thead-dark">
                 <tr>
                     <th>Framework</th>
-                    <th>Score</th>
+                    <th @click="toggle" :class="['sort-control', sortType]">Score</th>
                 </tr>
             </thead>
             <tbody>
-                <tr v-for="framework of topTenFrameworks">
+                <tr v-for="framework of topTenFrameworksSorted">
                     <td>{{ framework.name }}</td>
                     <td>{{ framework.score }}</td>
                 </tr>
@@ -42,8 +55,24 @@
                 { name: "Laravel", score: 89 },
                 { name: "React", score: 93 },
                 { name: "Vue.js", score: 89}
-            ]
-        }        
+            ],
+            order: 1
+        },
+        computed: {
+            topTenFrameworksSorted() {
+                return this.topTenFrameworks.sort((a, b) => (a.score - b.score) * this.order);
+            },
+
+            sortType() {
+                return this.order === 1 ? 'ascending' : 'descending';
+            }
+        },
+        methods: {
+            toggle() {
+                return this.order *= -1
+            }
+        }
+
     })
     </script>
 </body>
